# WRASM

./: .gitignore  Cargo.toml  LICENSE  README.md  editor_help.md  help.md
corpus/: x86_64.tsv
crates/docpane/: Cargo.toml
crates/docpane/src/: layout.rs  lib.rs  parser.rs  render.rs  theme.rs
crates/docpane/src/mermaid/: architecture.rs  build.rs  c4.rs  class.rs  er.rs  gantt.rs  git.rs  ir.rs  journey.rs  manual_layout.rs  mod.rs  render.rs  sequence.rs  shape_def.rs  timeline.rs
crates/ide/: Cargo.toml
crates/ide/src/: lib.rs  widget.rs
crates/nanotcl/: Cargo.toml
crates/nanotcl/src/: main.rs
crates/rust-tcl/: Cargo.toml  README.md  language guide.md
crates/rust-tcl/src/: ast.rs  bytecode.rs  cfg.rs  codegen.rs  error.rs  expr.rs  lexer.rs  lib.rs  list_value.rs  main.rs  parser.rs  registry.rs  sema.rs  span.rs  value.rs  verbs.rs  vm.rs
crates/selkie/: Cargo.toml
crates/selkie/src/: lib.rs
crates/selkie/src/diagrams/flowchart/: annotations.rs  flowchart.pest  mod.rs  parser.rs  types.rs  writer.rs
crates/selkie/src/diagrams/sequence/: parser.rs  types.rs
crates/selkie/src/layout/: size.rs  types.rs
crates/selkie/src/render/: flowchart.rs  mod.rs
crates/selkie/src/render/svg/: document.rs  edges.rs  markers.rs  mod.rs  shapes.rs
crates/studio/: Cargo.toml  build.rs
crates/studio/scripts/: find_labels.tcl  ui_demo.tcl
crates/studio/src/: bytes.rs  complete.rs  diagnostics.rs  doc.rs  hover.rs  lang.rs  lib.rs  nav.rs  outline.rs  sig.rs  snippet.rs  syntax.rs
crates/studio/tools/: studio.exe.manifest  studio.rc
crates/was/: Cargo.toml
crates/was/src/: inline.rs  lib.rs
crates/winkb/: Cargo.toml
crates/winkb/data/: README.md  directives.tsv  instructions.tsv
crates/winkb/src/: lib.rs  library.rs
docs/: api-guide.md  examples.md  gameaudio.md  gamecanvas.md  gpucanvas.md  index.md  instructions.md  issue-duplicate-label-diagnostic.md  language.md  macros.md  nano-tcl-breakpoints.md  nano-tcl-journal.md  nano-tcl-sprints.md  nano-tcl.md  quickstart.md  structured.md  studio-introspect.md  studio-tcl.md  windows-api.md
examples/: abctest.was  abctest2.was  abctest_chords.was  abctest_modes.was  abctest_ornaments.was  abctest_repeat.was  abctest_voices.was  abctest_voices2.was  brickout.was  brickout_fx.was  catch.was  d2d_balls.was  d3d11_clear.was  equ_demo.was  fbwin.was  fire.was  gamescanvas.was  gpu_brickout.was  gpu_g1.was  gpu_g2.was  gpu_g3.was  gpu_g4.was  gpu_g6.was  gpu_particles_demo.was  gpu_spike.was  julia.was  life.was  mandel.was  mandel_gpu.was  mandel_gpu_proc.was  metaballs.was  musictest.was  musictest_voices.was  overscan.was  palettefx.was  parallax.was  plasma.was  playtest.was  rotozoomer.was  sfxtest.was  (+4 more)
gpu/: blit.was  canvas.was  fx.was  gc_const.was  harness.was  input.was  introspect.was  mode7.was  particles.was  sprite.was  text.was  tile.was  wallfx.was
projects/galaxigans/: CAPTURE_BOSS_DESIGN.md  DESIGN.md  DESIGN2.md  galaxigans.was  galaxigans_alienbanks.was  galaxigans_alienbanks2.was  galaxigans_aliens2.was  galaxigans_assets.was  galaxigans_audio.was  galaxigans_beamfx.was  galaxigans_bombs.was  galaxigans_boss.was  galaxigans_bossart.was  galaxigans_collision.was  galaxigans_dance.was  galaxigans_data.inc  galaxigans_draw.was  galaxigans_enemies.was  galaxigans_fleetanim.was  galaxigans_fxtest.was  galaxigans_harness.was  galaxigans_hiscore.was  galaxigans_main.was  galaxigans_mine.was  galaxigans_mineart.was  galaxigans_music.was  galaxigans_pilotart.was  galaxigans_player.was  galaxigans_popup.was  galaxigans_saucer.was  galaxigans_saucerart.was  galaxigans_saucers.was  galaxigans_ship.was  galaxigans_starfield.was  galaxigans_tcl.was
projects/galaxigans/tests/: boss_capture_endgame.tcl  capture_boss.tcl
projects/galaxigans/tools/: boss_design.py  fleet_anim.py  mine_design.py  newspecies.py  pilot_design.py  saucer_design.py  ship_design.py  spritesheet.py
projects/jewels/: .gitignore  README.md  jewels.was  jewels_data.inc  jewels_draw.was  jewels_logic.was  jewels_main.was
projects/jewels/tests/: demo.tcl  level1.tcl  moves.tcl  probe_board.tcl
src/: backend.rs  coff.rs  difftest.rs  lib.rs  pe.rs
src/difftest/: x86.rs
src/rasm/: assemble.rs  encode.rs  mod.rs  parse.rs
tests/tcl/: .gitignore  check.tcl  checkbad.tcl  demo.tcl  gems.was  gpu_tcl_test.was  rel_gate_test.was
